--- a/portal/package.json
+++ b/portal/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "next": "15.0.2",
+    "qrcode.react": "^4.2.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
