--- a/portal/package.json
+++ b/portal/package.json
@@ -13,10 +13,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@prisma/client": "^6.6.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.7",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.0",
     "next": "15.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "prisma": "^6.6.0",
     "qrcode.react": "^4.2.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
