--- a/portal/package.json
+++ b/portal/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^6.1.6",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.4.7",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -29,6 +31,8 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
