--- a/portal/package.json
+++ b/portal/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "next": "15.0.2",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -34,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
